XiaomiParts : Enhancements and improvements 1) Call a service from BroadcastReceiver to restore values 2) Add user selectable delay to restore values after boot
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -25,10 +25,19 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.endless.settings.device.Startup" >
-            <intent-filter android:priority="100" >
+        <receiver android:name="com.endless.settings.device.Startup"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="100">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <service
+            android:name="com.endless.settings.device.RestoreService"
+	    android:directBootAware="true"
+            android:enabled="true"
+            android:exported="true">
+	</service>
     </application>
 </manifest>
